# validator_poc

./: Cargo.toml  metadata.scale
src/: main.rs
