[package]
name = "subxt_poc"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.37.0"
subxt-signer = "0.37.0"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
hex = "0.4.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
sp-core = { version = "21.0.0", default-features = false, features = ["std"] }
codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
sp-runtime = { version = "24.0.0", default-features = false, features = ["std"] }
rand = "0.8"
base64 = "0.13"